--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,17 @@ environment:
   sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
+  firebase_auth: ^3.3.9
+  cloud_firestore: ^3.1.9
+  firebase_core: ^1.12.0
+  firebase_storage: ^10.2.8
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  get_it: ^7.2.0
+  simple_moment: ^1.1.1
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
