--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   get_it: ^7.2.0
   simple_moment: ^1.1.1
   image_picker: ^0.8.5+3
+  swipable_stack: ^2.0.0
 
 dev_dependencies:
   flutter_test:
