--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   image_picker: ^0.8.5+3
   swipable_stack: ^2.0.0
   uuid: ^3.0.6
+  location: ^4.4.0
+  geocoding: ^2.0.4
 
 dev_dependencies:
   flutter_test:
